# dsjm_cleanup

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  NEWS~  aclocal.m4  config.status  config.status.lineno  configure  functions.txt  gmon.out  tempTest  testIdo.sh  testResults.csv  testTrack  testingAvg.sh  testingAvg.sh~
Testing_script/: DSJM_result.ods  testResultsAvg.csv
autom4te.cache/: output.1  requests  traces.0  traces.1
cleaning/examples/: CRS.cpp  FindSparsityPattern.cc  GenerateSparsityPattern.cc  IJ.txt  Matrix.mtx  Matrix2.mtx  Matrixout.txt  YHD.cpp  algorithm1.cpp  algorithm2.h  flaws.cpp  syym.txt  (+5 more)
cleaning/fortran/: 618-l.f  Makefile.am  mmio-f.f  testsrtdat.f
cleaning/fortran/c/src/: 618-l.c  testio.c  testsrtdat.c
dsjm_testing/: testing.sh  testing~
examples/: .cproject  .nfs0000000000338063000002ce  ForwardDifference  Makefile  Makefile.am  Makefile.am~  Makefile.in  driver.cc  driver.cc~  dsjmverify  gcolor  gcolor.cpp  gcolor.cpp~  gmon.out
experiments/: run.py
fortran/: 618.f  testio.f
guile/: .gcolor  load-config.cc
mex/: dsjmcolor.cc  dsjmseed.cc  test.m
src/: BucketPQ.hh  CSegMatrix.hh  IMatrix.hh  IRowColumnDS.cc  IRowColumnDS.hh  LFO.hh  Makefile  Makefile.am  Makefile.am~  Makefile.in  Matrix.cpp  Matrix.cpp~  Matrix.hh  Matrix.hh~  Misc.hh  NullOrderingMethod.hh  ProfitPartitionMatrix.hh  RLF.hh  Result.hh  Result.hh~  SimplePartitionedMatrix.cc  SimplePartitionedMatrix.hh  Utility.cc  _my_functor.hh  deg_functor.hh  extend_functor.hh
src/.deps/: CLI.Po  IMatrix.Po  IRowColumnDS.Po  Matrix.Po  Utility.Po  mmio.Po
(+66 files in other folders)
