CORE_SOURCES = mmio.cpp Matrix.cpp  CLI.cpp Utility.cc Timer.cpp PartitionLoader.cc IMatrix.cc CSegMatrix.cpp Configuration.cc NNZTag.cc SimplePartitionedMatrix.cc IRowColumnDS.cc ProfitPartitionMatrix.cc
## Profiling Flags
## CPP_PROFILING_FLAGS = -g3 -O0 -pg
## CPP_PROFILING_FLAGS = -g -O0
## CPP_PROFILING_FLAGS = -O0

## Executables to Build.
noinst_LIBRARIES = libmatrix.a
libmatrix_a_SOURCES = $(CORE_SOURCES)




