## Programs to Build
bin_PROGRAMS = $(F_PROGRAM) $(F_TUTORIAL) $(F_SRTDAT) 


## Mappings of the executables. / Dictionary-Like
F_PROGRAM = 618
F_TUTORIAL = FortranTestIO 
F_SRTDAT = FortranSrtDat



## F_PROGRAM / 618
618_SOURCES = 618.f mmio-f.f

## F_TUTORIAL / FortranTestIO
FortranTestIO_SOURCES = mmio-f.f 618-l.f testio.f

## F_SRTDAT / FortranSrtDat
FortranSrtDat_SOURCES = mmio-f.f 618-l.f testsrtdat.f


